feat: adiciona gerenciamento de faltas e mençoes antigas
